新增多筆及單筆的行業別查詢
